--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 ANTHROPIC_API_KEY=your_api_key_here
+NEXT_PUBLIC_API_URL=http://localhost:5000/api
+ACCESS_PASSWORD=your_secure_password_here
+JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
