--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,40 +1,42 @@
-# Production Dockerfile
-FROM python:3.11-slim
+# Multi-stage Production Dockerfile for smaller image size
+# Stage 1: Builder
+FROM python:3.9-slim as builder
 
-# Set working directory
 WORKDIR /app
 
-# Install system dependencies
+# Install build dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
     && rm -rf /var/lib/apt/lists/*
+ENV FLASK_ENV=production
 
-# Copy requirements first for better caching
+# Copy requirements and install globally
 COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Install Python dependencies including production server
-RUN pip install --no-cache-dir -r requirements.txt && \
-    pip install --no-cache-dir gunicorn==21.2.0
+# Stage 2: Runtime
+FROM python:3.9-slim
 
-# Copy the rest of the application
+WORKDIR /app
+
+# Copy Python dependencies from builder (installed globally)
+COPY --from=builder /usr/local/lib/python3.9/site-packages /usr/local/lib/python3.9/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
+
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
+
+# Copy application code
 COPY . .
 
-# Install the package
-RUN pip install --no-cache-dir .
-
-# Create non-root user for security
+# Create non-root user
 RUN useradd -m -u 1000 appuser && \
     chown -R appuser:appuser /app
-
-# Switch to non-root user
 USER appuser
 
 # Expose port
-EXPOSE 5000
+EXPOSE 8000
 
-# Set environment variables
-ENV PYTHONUNBUFFERED=1
-ENV FLASK_ENV=production
-
-# Run production server with Gunicorn
-CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "4", "--timeout", "120", "src.api.app:create_app()"]
+# Run the development server
+CMD ["python3", "src/api_server.py"]
